--- a/index.html
+++ b/index.html
@@ -2,8 +2,10 @@
 <html lang="en">
 
 <head>
+
     <meta charset="UTF-8">
     <title>Graficador Ventas</title>
+    <link rel="icon" href="images/Imagen1.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta http-equiv="x-ua-compatible" content="ie-edge">
     <script src="js/datos.js"></script>
@@ -78,7 +80,7 @@
         <a target="_blank" href="http://ufps.edu.co/">UFPS</a>
       </div>
 
-<!--Boostrap-->
+<!--Boostrap 4-->
     <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js"
         integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n"
         crossorigin="anonymous"></script>
